# mysql-parser-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/ast/: base.rs  ci_str.rs  column_name.rs  common.rs  common_table_expression.rs  expr_node.rs  frame_clause.rs  functions.rs  group_by_clause.rs  index_hint.rs  limit.rs  line_clause.rs  mod.rs  node.rs  op_code.rs  order_by_clause.rs  partition_by_clause.rs  quote.rs  result_set_node.rs  row_expr.rs  select_field.rs  select_into_option.rs  select_lock_info.rs  select_stmt.rs  set_opr_stmt.rs  set_or_type.rs  statement.rs  subquery_expr.rs  table_name.rs  table_optimizer_hint.rs  table_refs_clause.rs  table_sample.rs  table_source.rs  window_spec.rs  with_clause.rs
src/charset/: charset.rs  encoding.rs  encoding_ascii.rs  encoding_bin.rs  encoding_gbk.rs  encoding_latin1.rs  encoding_lazy_static.rs  encoding_table.rs  encoding_test.rs  encoding_trait.rs  encoding_utf8.rs  encoding_utf8mb3_strict.rs  mod.rs
src/common/: error.rs  misc.rs  mod.rs  span.rs  terror.rs
src/mysql/: consts.rs  errcode.rs  errname.rs  mod.rs
src/parser/: common.rs  error.rs  input.rs  mod.rs  parser.rs  token.rs  token_kind.rs
src/parser/statements/: column_name.rs  common.rs  expression.rs  keywords.rs  literal.rs  mod.rs  num_literal.rs  select_statement.rs  set_opr_stmt.rs  set_opt_stmt.rs  statement.rs  table_hints.rs  table_name.rs  vairable.rs  with_clause.rs
src/parser_test/: mod.rs  select_parser_test.rs
src/types/: decimal.rs  helper.rs  mod.rs
